feat(OutputView): 구매한 로또 개수와 각 로또 번호를 출력하는 기능 추가